--- a/css/scss/_page.scss
+++ b/css/scss/_page.scss
@@ -7,6 +7,10 @@
 
 // ==========================================================
 
+#container{
+	overflow: hidden;
+}
+
 #portfolio .slider{
 	margin: 0 auto;
 	padding: 0;
